# AMS_BP

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sim_config.toml  sitemap.xml
.github/workflows/: pages.yml  publish_pypi.yml
<YOUR-PATH-HERE-CAN-BE-ABSOLUTE-OR-RELATIVE>/: Cell_Movie_Test_001.ome.tiff  metadata.json
API_Documentation/cells/base_cell/: index.html
API_Documentation/cells/rectangular_cell/: index.html
API_Documentation/cells/rod_cell/: index.html
API_Documentation/cells/spherical_cell/: index.html
API_Documentation/configio/configmodels/: index.html
API_Documentation/configio/convertconfig/: index.html
API_Documentation/configio/experiments/: index.html
API_Documentation/configio/saving/: index.html
API_Documentation/core/sim_microscopy/: index.html
API_Documentation/main_cli/: index.html
API_Documentation/metadata/metadata/: index.html
API_Documentation/run_cell_simulation/: index.html
API_Documentation/sim_config/: index.html
API_Documentation/sim_microscopy/: index.html
docs/: index.md
docs/API_Documentation/: run_cell_simulation.md  sim_config.md  sim_microscopy.md
examples/QuantitativeExperiments/: FRAP_methods.ipynb
examples/VisualizingIndividualModules/: laser_modulation.ipynb  modules_explained.ipynb
search/: search_index.json
src/AMS_BP/: __init__.py  main_cli.py  run_cell_simulation.py  sim_config.toml  sim_microscopy.py
src/ASMS_BP/: __init__.py  run_cell_simulation.py  sim_config.toml  sim_microscopy.py
src/SMS_BP_adv/: sim_config.toml  sim_microscopy.py  simulate_cell.py
(+133 files in other folders)
